--- a/.github/workflows/guardian.yml
+++ b/.github/workflows/guardian.yml
@@ -18,4 +18,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install fastapi uvicorn typer requests pytest
       - name: Run tests
-        run: pytest -q
+        run: |
+          export PYTHONPATH=$PWD/src
+          pytest -q
