--- a/.github/workflows/guardian.yml
+++ b/.github/workflows/guardian.yml
@@ -24,25 +24,8 @@ jobs:
 
       - name: Run tests
         run: |
-          # PYTHONPATH inline ensures src/ is found
           PYTHONPATH=$PWD/src python -m pytest -q
 
-      - name: Run simple static scan
+      - name: Run static scan
         run: |
-          echo "Scanning repository scripts..."
-          python - <<'PY'
-import glob, json
-from src.analyzer.rules import analyze_script
-
-issues = {}
-for path in glob.glob("**/*.sh", recursive=True):
-    with open(path, "r", encoding="utf-8") as fh:
-        content = fh.read()
-    findings = analyze_script(content)
-    if findings:
-        issues[path] = [f.__dict__ for f in findings]
-
-print(json.dumps(issues, indent=2))
-if issues:
-    print("Warnings found")
-PY
+          python scripts/run_scan.py
