--- a/.github/workflows/guardian.yml
+++ b/.github/workflows/guardian.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Run tests
         run: |
-          PYTHONPATH=$PWD/src python scripts/run_scan.py
+          PYTHONPATH=$PWD/src python -m pytest -q
 
       - name: Run static scan
         run: |
-          python scripts/run_scan.py
+          PYTHONPATH=$PWD/src python scripts/run_scan.py
